# nokia-dct3-emulator

./: .gitignore  Makefile  README.md  run
.githooks/: pre-commit
.github/workflows/: no-firmware.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  dct3_engine.c  dct3_engine.h  dct3_jni.c
android/gradle/wrapper/: gradle-wrapper.properties
docs/: 5110-DSP-CANONICAL-STATE.md  MODELS.md  architecture-3310.md  dsp-boot-upload-architecture.md  dsp-c54x-memory-model.md  dsp-mcu-init-baseline.md  forensics-toolkit.md  hal-spec.md  keypad-input-3310.md  multi-model-architecture.md  sim-bridge-protocol.md
esp32/simbridge/: simbridge.ino
packaging/deb/: README.md  control.in  copyright  dct3-emu.desktop  wrapper.sh
src/core/: dct3_core.c  dct3_core.h  dct3_debug_stub.c  dct3_flash_id.h
src/harness/: difftrace.c  fault.c  harness.h  heap_shadow.c  runloop.c  seccode.c  seccode.h  telemetry.c
src/mad2/: dsp_bridge.c  dsp_bridge.h  dsp_default.c  dsp_rom4.c  emu_audio.c  emu_host.h  ext_eeprom.c  ext_eeprom_blobs.c  ext_eeprom_blobs.h  mad2.c  mad2.h  mad2_bus.c  mad2_ccont.c  mad2_diag.c  mad2_flash.c  mad2_internal.h  mad2_keypad.c  mad2_lcd.c  mad2_mbus.c  mad2_sim.c  mad2_timers.c
src/models/: keylines_5110.h  keylines_nsm_a.h  mad2_sigs.c  mad2_sigs.h  model.c  model.h
src/models/2100/: profile.c
src/models/3210/: profile.c  symbols_3210_v600.h
src/models/3310/: profile.c  symbols_3310_v579.h
src/models/3330/: profile.c
src/models/3350/: profile.c
src/models/3410/: profile.c  symbols_3410_v546.h
src/models/5110/: profile.c
src/models/5110i/: profile.c
src/models/5130/: profile.c
src/models/5190/: profile.c
src/models/5210/: profile.c  (+1 more)
src/web/: main.c
tests/: test_core.c  test_harness_wr.c  test_mad2.c
tools/: boot_trace.c  check_guardrails.sh  disfw.c  dsp_frame.h  dsp_serial.h  gen_ext_eeprom_blobs.py  gen_fw_manifest.mjs  graft_eeprom_block.py  gui.h  gui_sdl.c  harness_diff.mjs  mbus_bridge.c  mbus_bridge.h  nav.mjs  provision_2100_eeprom.py  restore_2100_calib.py  sim_bridge.c  sim_bridge.h  simprobe.c  trace_names.h  web_boot_test.mjs  web_fingerprint.mjs
tools/dbgcon/: README.md  dbgcon.h  dbgcon_selftest.c  dbgcon_stripcheck.c
tools/nokix/: Makefile  README.md  dump_symbols.nrx  locate_mbus.nrx  locate_mbus2.nrx  locate_one.nrx  nokix.c
tools/symbols/: 3210-v600.bitplane.yaml  3210-v600.overlay.yaml  3210-v600.scratch.archive.txt  3210-v600.symbols.txt  3310-v579.canonical.yaml  3310-v579.nokix.yaml  3310-v579.overlay.yaml  3310-v579.scratch.archive.txt  3310-v579.symbols.txt  3310-v639.nokix.yaml  3310-v639.symbols.txt  3330-v416.nokix.yaml  3330-v416.symbols.txt  3350-v522.nokix.yaml  3350-v522.symbols.txt  3410-v546.nokix.yaml  3410-v546.overlay.yaml  3410-v546.scratch.archive.txt  3410-v546.symbols.txt  5210-v540.nokix.yaml  5210-v540.overlay.yaml  5210-v540.scratch.archive.txt  5210-v540.symbols.txt  5510-v350.nokix.yaml  5510-v350.symbols.txt  7110-v500.nokix.yaml  7110-v500.overlay.yaml  7110-v500.scratch.archive.txt  7110-v500.symbols.txt  8850-v531.nokix.yaml  8850-v531.overlay.yaml  8850-v531.scratch.archive.txt  8850-v531.symbols.txt  README.md  dump_nokix.py  gen_c_table.py  gen_sig.py  gen_symbols_txt.py  gen_trace_names.py  import_3330_canonical.py  (+6 more)
web/: dct3.js  dct3.wasm  index.html  main.js  manager.html  manager.js  style.css
web/next/: index.html  main.js  style.css
web/shells/: shells.js
(+33 files in other folders)
